--- a/frontend/login.html
+++ b/frontend/login.html
@@ -49,7 +49,7 @@
                 });
                 const d=await r.json();
                 if(d.success){
-                    localStorage.setItem('adminToken',d.token);
+                    localStorage.setItem('adminPassword',fd.get('password'));
                     location.href='/';
                 }else{
                     showToast(d.message||'Login failed','error');
@@ -74,14 +74,6 @@
             },2000);
         }
 
-        window.addEventListener('DOMContentLoaded',()=>{
-            const t=localStorage.getItem('adminToken');
-            if(t){
-                fetch('/v2/accounts',{headers:{Authorization:`Bearer ${t}`}})
-                    .then(r=>{if(r.ok)location.href='/'})
-                    .catch(()=>{});
-            }
-        });
     </script>
 </body>
 </html>
